--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,3 +6,8 @@ bind l select-pane -R
 bind C-l send-keys 'C-l'
 
 set-window-option -g mode-keys vi
+
+set -g default-terminal "screen-256color"
+set -g status-interval 60
+WEATHER='#(curl -s wttr.in/\?format\="%%l:+%%c%%20%%t%%60%%w&period=60")'
+set -g status-right "$WEATHER ..."
