--- a/.tobashrc
+++ b/.tobashrc
@@ -5,6 +5,9 @@ export PS1='$(whoami)@${PWD/*\//}:~$ '
 alias ls="ls --color --group-directories-first"
 alias tmux="tmux new bash \; split-window -h\;"
 alias lynx='lynx --accept_all_cookies -vikeys'
+if lsb_release -i | grep -q "Ubuntu"; then
+    alias supgrade='sudo apt update && sudo apt upgrade -y'
+fi
 
 if [ -f ~/.workbashrc ]; then
         source ~/.workbashrc
