tmux: changed binding for resizing current pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind + resize-pane -R
+bind - resize-pane -L
+
 bind C-l send-keys 'C-l'
 
 set-window-option -g mode-keys vi
