--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,6 @@ set-window-option -g mode-keys vi
 set -g default-terminal "screen-256color"
 set -g status-interval 60
 WEATHER='#(curl -s wttr.in/\?format\="%%l:+%%c%%20%%t%%60%%w&period=60")'
-set -g status-right "$WEATHER ..."
+set -g status-right "#(date +%H:%M) $WEATHER ..."
 
 set -g terminal-overrides ',xterm-256color:Tc'
