--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,9 @@ set-window-option -g mode-keys vi
 
 set -g default-terminal "screen-256color"
 set -g status-interval 60
+set -g status-right-length 50
 WEATHER='#(curl -s wttr.in/\?format\="%%l:+%%c%%20%%t%%60%%w&period=60")'
-set -g status-right "#(date +%H:%M) $WEATHER ..."
+BAT="#(upower -i /org/freedesktop/UPower/devices/battery_BAT0 | grep percentage | awk '{print $2}')"
+set -g status-right "$BAT #(date +%H:%M) $WEATHER ..."
 
 set -g terminal-overrides ',xterm-256color:Tc'
