--- a/.tobashrc
+++ b/.tobashrc
@@ -58,3 +58,6 @@ function gedit {
 }
 
 alias l1='ls -1'
+
+# disable touchscreen on Thinkpad laptop
+xinput --disable $(xinput | awk '/Touchscreen/ {print $5}' | sed 's/id=\([1-9][0-9]*\)/\1/g')
