--- a/.tobashrc
+++ b/.tobashrc
@@ -61,3 +61,9 @@ alias l1='ls -1'
 
 # disable touchscreen on Thinkpad laptop
 xinput --disable $(xinput | awk '/Touchscreen/ {print $5}' | sed 's/id=\([1-9][0-9]*\)/\1/g')
+
+# TODO: obsidian still outputs some garbage
+function obsidian {
+    /usr/bin/obsidian & >/dev/null 2>&1
+    disown $!
+}
