--- a/.tobashrc
+++ b/.tobashrc
@@ -27,6 +27,8 @@ alias gd="git diff"
 alias gau="git add -u"
 alias gp="git pull"
 alias gpush="git push"
+alias gdc="git diff --cached"
+alias ga="git add"
 
 ################################################################################
 # Some settings to handle tmux history
