--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -6,6 +6,7 @@
     - name: Install sdkman
       args:
         warn: false # otherwise will warn against using curl
+        creates: $HOME/.sdkman/bin/sdkman-init.sh
       ansible.builtin.shell: |
         curl -s "https://get.sdkman.io" | bash
 
