move pkg installations from dockerfile to ansible

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -10,6 +10,8 @@
       become_method: sudo
       apt:
         pkg:
+          - curl
+          - zip
           - tmux
           - htop
           - tree
