--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -14,6 +14,8 @@
       - gnome-tweaks
       - gnome-shell-extensions
       - vim
+      - git
+      - gh
 
   tasks:
     - name: Update, upgrade and autoremove packages
